libmongoc 1.29.2
================

Fixes:
  * Rename `set_error` function to avoid symbol conflicts.
  * Fix Windows ARM 64 build.
  * Fix comparison of uninitialized bytes.
  * Fix format specifier on macOS.

Notes:
  * Windows ARM 64 is not-yet officially tested or supported. Support is community driven.

Thanks to everyone who contributed to the development of this release.

  * Adrian Dole
  * Christian Schmitz
  * Antony Polukhin
  * Kevin Albertson



libmongoc 1.29.1
================

Fixes:

  * Assert session is consistent with client in `mongoc_bulkwrite_set_session`.

Thanks to everyone who contributed to the development of this release.

  * Jeremy Mikola
  * Kevin Albertson



libmongoc 1.29.0
================

Improvements:

  * Retry KMS requests on transient errors.

Platform Support:

  * Support for Visual Studio 2013 is dropped.

Deprecated:

  * `mongoc_client_command` is deprecated and planned for removal in a future release. Use `mongoc_client_command_simple` instead.
  * `mongoc_database_command` is deprecated and planned for removal in a future release. Use `mongoc_database_command_simple` instead.
  * `mongoc_collection_command` is deprecated and planned for removal in a future release. Use `mongoc_collection_command_simple` instead.

Notes:

  * Raise required version of libmongocrypt to 1.12.0 to support In-Use Encryption (corresponds to the CMake option: `ENABLE_CLIENT_SIDE_ENCRYPTION`).
  * A future minor release will raise the minimum supported MongoDB Server version from 4.0 to 4.2. This is in accordance with [MongoDB Software Lifecycle Schedules](https://www.mongodb.com/legal/support-policy/lifecycles). **Support for MongoDB Server 4.0 will be dropped in a future release!**

Thanks to everyone who contributed to the development of this release.

  * Kevin Albertson
  * Ezra Chung
  * Micah Scott
  * Adrian Dole
  * Andreas Braun
  * Joshua Siegel


libmongoc 1.28.1
================

Fixes:
