@@ -1,6 +1,10 @@
 libbson 1.30.0 (Unreleased)
 ===========================
 
+Deprecated:
+
+  * Support for Debian 9 and Debian 10.
+
 Fixes:
 
   * Truncated output of `bson_as_json_with_opts` is changed to no longer split valid UTF-8 sequences.
