@@ -1,6 +1,10 @@
 libmongoc 1.29.2
 ================
 
+Deprecated:
+
+  * Support for Debian 9 and Debian 10.
+
 Fixes:
   * Rename `set_error` function to avoid symbol conflicts.
   * Fix Windows ARM 64 build.
